FitnessUA/war/css/createSchedule.css
h1 {
	font-size: 2em;
	font-weight: bold;
	color: #777777;
	margin: 40px 0px 70px;
	text-align: center;
}

.title {
	font-size: 2em;
	font-weight: bold;
	color: #777777;
	margin: 10px 0px 10px;
	text-align: center;
}

.sendButton {
	display: block;
	font-size: 16pt;
}

.loginPanel {
	text-align: center;
	position: absolute;
	top: 5%;
	left: 42.5%;
}

.logoutPanel {
	text-align: center;
	position: absolute;
	top: 40px;
	right: 20px;
}

.errorPanel {
	text-align: center;
	position: absolute;
	width: 50%;
	top: 15%;
	right: 25%;
	left: 25%;
}

.errorLabel {
	color: red;
}

/** Most GWT widgets already have a style name defined */
.gwt-DialogBox {
	width: 400px;
}

.dialogVPanel {
	margin: 5px;
}

.serverResponseLabelError {
	color: red;
}

/** Set ids using widget.getElement().setId("idOfElement") */
#closeButton {
	margin: 15px 6px 6px;
}

.extrablock {
	position: relative !Important;
	left: 1% !Important;
	top: 1% !Important;
	border: inset !Important;
	width: 98% !Important;
	height: 100px !Important;
}
/*
.gwt-InlineLabel {
	font-variant: normal;
	font-weight: bold;
	font-size: 18px;
	font-style: italic;
	vertical-align: middle;
	text-align: center !Important;
	position: absolute !Important;
	left: 40% !Important;
	top: 20% !Important;
}
*/
.selectItem {
	width: 149px !Important;
	text-align: left !Important;
}

.item,.itemFocused {
	width: 148px !Important;
	border: 1px groove !Important;
}

.pickListCell,.pickListCellDark,.pickListCellSelected,.pickListCellSelectedDark,.listTable
	{
	width: 140px !Important;
	text-align: left !Important;
}

.clubColumn {
	width: 175px !Important;
}

.smallLabel {
	font-size: 9pt !Important;
	font-weight: normal;
}

td {
	font-weight: bold;
	vertical-align: middle !Important;
	text-align: center !Important;
}

.shiftTableCell {
	border: 1px groove black !Important;
}

.headerPanel {
	width: 100%;
	min-width: 1195px;
	height: 95px;
	border-bottom: 1px groove black;
}

.dayCell,.buttonRounded,.buttonRoundedOver,.buttonRoundedDown,.pickListCell,.pickListCellSelected,.pickListCellDark,.pickListCellSelectedDark
	{
	font-size: 8pt !Important;
	font-weight: normal !Important;
}

.dayCell{
	width: 114px !Important;
}

.scheduleColumn {
	width: 116px !Important;
}

.shiftItem {
	width: 107px !Important;
}

.selectItemTextHint {
	width: 78px !Important;
	color: white !Important;
	visibility: hidden;
}

.dateBoxPopup {
	z-index: 300000;
}

